--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/index.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/index.hbs
@@ -1,6 +1,8 @@
 {{layout "privilege"}}
 {{favicon "images/favicon.png" type="image/png"}}
 {{title "Home | " @config.appName}}
+{{css "css/user-portal.css"}}
+
 {{#fillZone "breadcrumbs"}}
     <div class="breadcrumb-wrapper">
         <ol class="breadcrumb">
@@ -8,13 +10,20 @@
         </ol>
     </div>
 {{/fillZone}}
+
 {{#fillZone "content"}}
     <div class="body-wrapper">
-        <div class="message message-info">
-            <h4><i class="icon fw fw-info"></i>{{t "user-portal.no-applications.header"}}</h4>
-
-            <div style="padding-left: 25px;">
-                <p style="white-space: pre-wrap;">{{t "user-portal.no-applications.body"}}</p>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="page-header">
+                        <h1>{{t "user-portal.applications.header"}}</h1>
+                    </div>
+                    <div class="message message-info">
+                        <h4><i class="icon fw fw-info"></i>{{t "user-portal.no-applications.header"}}</h4>
+                        <p>{{t "user-portal.no-applications.body"}}</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
