--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/signup.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/signup.hbs
@@ -60,6 +60,17 @@
                                                     required/>
                                         {{/each}}
                                     </div>
+                                    <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
+                                        <label for="domain">{{t "user-portal.user.signup.domain"}}:</label></br>
+                                        <input type="hidden" name="domainValue" id="domainValue"
+                                               class="form-control"/>
+                                        <select class="dropdown" id="domainSelector">
+                                            <option value="default">{{t "user-portal.user.signup.domain.placeholder"}}</option>
+                                            {{#each domainNames}}
+                                                <option value={{this}}>{{this}}</option>
+                                            {{/each}}
+                                        </select>
+                                    </div>
                                 </div>
                                 <div class="form-group">
                                     <div class="password_strength_meter ">
@@ -153,4 +164,3 @@
         </div>
     {{/if}}
 {{/fillZone}}
-
