--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/profile/profile.hbs
@@ -33,7 +33,7 @@
                 <div class="square-element setbgcolor">
                     <a id="image-edit" class="sub-icon" title="Edit"><i class="fw fw-camera fw-lg"></i></a>
                     {{#if profileImage}}
-                        <img src="/user-portal/root/apis/profile-image-service/image?userid={{userId}}" alt="profileimage">
+                        <img class="profile-thumb" src="/user-portal/root/apis/profile-image-service/image?userid={{userId}}" alt="profileimage">
                     {{else}}
                         <div class="user-name-icon">{{usernameChar}}</div>
                     {{/if}}
